[gd_scene load_steps=8 format=2]

[ext_resource path="res://UnderGroundWorld/SpiderChestClosed.png" type="Texture" id=1]
[ext_resource path="res://UnderGroundWorld/SpiderChest.gd" type="Script" id=2]
[ext_resource path="res://UnderGroundWorld/SpiderChestOpen.png" type="Texture" id=3]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://UnderGroundWorld/SpiderChestEmpty.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0208

[sub_resource type="CircleShape2D" id=2]
radius = 19.105

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="SpiderChestClosed" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="SpiderChestOpen" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -2 )
texture = ExtResource( 3 )

[node name="SpiderChestEmpty" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -2 )
texture = ExtResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -16, 12, -13, 7, -13, -8, -9, -13, 10, -13, 14, -9, 14, 6, 16, 8, 16, 12, 15, 13, 7, 13, 6, 12, 6, 9, -3, 9, -4, 13, -15, 13 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
position = Vector2( -39, 45 )
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 39, -44 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 12.0
margin_top = -12.0
margin_right = 110.0
margin_bottom = 2.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Attack To Open"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
